# awesome-api-security

./: .dockerignore  Dockerfile  Dockerfile.multistage  Dockerfile.testing  Makefile  README.md  TODO.md  api_endpoints_enumeration.sh  collect_wordlists.sh  docker-compose.yaml
.github/workflows/: alpha-image.yml  anchore-analysis.yml  collect-apicheck-tools.yml  collect_wordlists.yml  docker-image.yml  docker-multistage-image.yml  docker-testing-image.yml
api-toolbox/: Dockerfile
apicheck-tools/: Dockerfile.apicheck
apicheck-tools/curl/: Dockerfile  META  Pipfile  README.md  bin2pytest.py  gcurl  setup.py
apicheck-tools/jwt-checker/: .dockerignore  Dockerfile  META  README.md
apicheck-tools/oas-checker/: Dockerfile  META  README.md  linter.sh  (+1 more)
apicheck-tools/send-to-proxy/: Dockerfile  META  README.md  requirements.txt  setup.cfg  setup.py
apicheck-tools/send-to-proxy/examples/: valid-request-user-password-one-line.json
apicheck-tools/send-to-proxy/sendtoproxy/: __main__.py
apicheck-tools/sensitive-data/: .gitignore  Dockerfile  LICENSE  MANIFEST.in  META  README.md  requirements.txt  setup.cfg
apicheck-tools/sensitive-data/examples/: ignore-1  request-issue-in-header.json
apicheck-tools/sensitive-data/sensitive_data/: __main__.py  rules.yaml
drafts/: docker-compose.yaml  enumerate_endpoints.sh
labs/: VAmPI.sh  crAPI.sh  damn-vulnerable-graphql.sh  damn-vulnerable-microservices.sh  dvws-node.sh  generic-university.sh
wordlists/: collect.sh  collect_wordlists.sh  wordlist_bundle_latest.txt  yassineaboukir-3203-common-api-endpoints.txt
(+46 files in other folders)
