[metadata]
name = apicheck-send-to-proxy
description = APICheck Send To Proxy tool
version = file: VERSION
long_description = file: README.md
classifiers =
  Programming Language :: Python :: 3.8
authors = BBVA Innovation Labs
url = https://github.com/bbva/apicheck

[options]
zip_safe = True
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    send-to-proxy = sendtoproxy.__main__:main
