[metadata]
name = apicheck-sensitive-data
description = Sensitive data detector
version = file: VERSION
long_description = file: README.md
classifiers =
  Programming Language :: Python :: 3.8
authors = BBVA Innovation Labs
url = https://github.com/bbva/apicheck

[options]
zip_safe = True
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    sensitive-data = sensitive_data.__main__:main
